# bevy_tile_map

./: Cargo.toml  Readme.md
.cargo/: config.toml
examples/: as_tiles.rs  color_tile.rs  interaction.rs  layers.rs  minimal.rs  random.rs  sprite_mod.rs
src/: chunk.rs  interaction.rs  lib.rs  tile_map.rs
src/render/: chunk.wgsl  mod.rs  tile_sheet.rs
