[package]
name = "bevy_tile_map"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
] }
bitflags = "1.3"
bytemuck = "1.9"
bevy_mod_raycast = "0.4"

[dev-dependencies]
bevy = "0.7"
rand = "0.8"

[profile.release]
debug = true
